# DanWiki

./: .gitignore  bot.md  ПРЕЗЕНТАЦИИ.md
.obsidian/: community-plugins.json  graph.json  workspace.json
.obsidian/plugins/3d-graph/: data.json
Docs/: Content.md  Go Knowledge.md  Python Knowledge.md  Python Roadmap.canvas  Python Roadmap.md  Systems.md  TODO.md  Моя энциклопедия.canvas
Docs/Commands/: ===Commands.md  >Commands.md  Linux.md  WSL.md  Windows.md
Docs/Errors/: ===Errors.md  >Errors.md  PowerShell.md  Python.md
Docs/Go/1.Base/: ===GoBasics.md  Basic Syntax Go.md  Maps.md  nil.md  Инструменты командной строки.md  Массивы & Arrays.md  Операторы.md  Переменные.md  Работа с константами (Const & iota).md  Срезы & Slices.md  Строки и руны & Strings and runes.md  Структуры & Structures.md  Типы данных.md  Указатели.md  Условия.md  Функции.md  Циклы.md
Docs/Go/2. Advanced/: ===GoAdvanced.md  Методы.md
Docs/Python/: Алгоритм развертывания проекта.md
Docs/Python/1. Base/: ===PyBasics.md  Basic Syntax.md  Functions, Builtin Functions.md  Lists, Tuples, Sets, Dictionaries.md  (+2 more)
Docs/Stack/: ===Stack.md  >Stack.md  Docker.md  cron.md  git.md  redis.md  ssh.md
Docs/_attachments/: try_except_else.703aaeeb63d3.avif
SQLAlchemy_train/: main.py  pyproject.toml
SQLAlchemy_train/src/: config.py  database.py  main.py  models.py
SQLAlchemy_train/src/migrations/: env.py
SQLAlchemy_train/src/migrations/versions/: 75acdad81a5e_.py  99971a05a957_.py  b24a59dc42b3_.py  e4705190176b_.py
SQLAlchemy_train/src/queries/: async_orm.py  core.py  orm.py
(+56 files in other folders)
