[tool.poetry]
name = "sqlalchemy-train"
version = "0.1.0"
description = ""
authors = ["zveropolis <zadira-era@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg = "^3.1.19"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
alembic = "^1.13.1"
fastapi = "^0.111.0"
isort = "^5.13.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
